--- a/index.html
+++ b/index.html
@@ -70,6 +70,7 @@
 
 <section id = "contact">
   <div class="content">
+    <a class="socialApp" href="https://csmariah.github.io/Mariah-CV/"><img src="icons/resume.png" alt="Mariah'sCV" height="50px;" width="50px;"></img></a>
     <a class="socialApp" href="https://uqu.edu.sa/mskhayat"><img src="icons/web.png" alt="UQUwebsite" height="50px;" width="50px;"></img></a>
     <a class="socialApp" href="mailto:mskhayat@uqu.edu.sa"><img src="icons/email.png" alt="Email" height="50px;" width="50px;"></img></a>
     <a class="socialApp" href="https://www.youtube.com/channel/UCFHn44byvAsKzDQz5e6VVbA"><img src="icons/youtube.png" alt="Youtube" height="50px;" width="50px;"></img></a>
